Fully automate dev setup with Gitpod
This commit implements a fully-automated development setup using Gitpod.io, an
online IDE for GitLab, GitHub, and Bitbucket that enables Dev-Environments-As-Code.
This makes it easy for anyone to get a ready-to-code workspace for any branch,
issue or pull request almost instantly with a single click.

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,6 @@
-image:
-  file: .gitpod.Dockerfile
-
 tasks:
-  - init: yarn install
+  - init: yarn
     command: yarn dev
+ports:
+  - port: 1234
+    onOpen: open-browser
