--- a/contract/package.json
+++ b/contract/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "greeter",
+  "name": "you_should_rename_your_contract",
   "version": "0.0.1",
   "license": "UNLICENSED",
   "private": true,
-  "scripts": {
-    "build": "asb",
-    "build:debug": "asb --target debug",
-    "test": "asp --nologo"
+ "scripts": {
+    "build": "yarn build:as",
+    "build:as": "yarn asb ../contract/assembly/main.ts",
+    "build:rs": "(cd contracts/rust && ./build.sh)",
+    "clean": "rm -rf ./out && (cd contracts/rust && cargo clean)",
+    "test": "yarn test:unit:as && yarn test:unit:rs",
+    "test:unit:as": "npx asp --verbose --nologo -c ../contract/assembly/as-pect.config.js -f unit.spec",
+    "test:unit:rs": "(cd contracts/rust && cargo test -- --nocapture --color always)"
   },
   "dependencies": {
     "near-sdk-as": "2.2.4"
