--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "npm run build:contract && npm run build:web",
-    "build:contract": "node contract/compile.js",
-    "build:contract:debug": "node contract/compile.js --debug",
+    "build:contract": "node ./contract/assembly/compile.js",
+    "build:contract:debug": "npx asb ./contract/assembly/main.ts --outDir=./out/",
+    "build:as": "yarn asb ./contract/assembly/main.ts",
     "build:web": "parcel build src/index.html --public-url ./",
     "dev:deploy:contract": "near dev-deploy",
     "deploy:contract": "near deploy",
@@ -14,7 +15,8 @@
     "prestart": "npm run build:contract:debug && npm run dev:deploy:contract",
     "start": "echo The app is starting! It will automatically open in your browser when ready && env-cmd -f ./neardev/dev-account.env parcel src/index.html --open",
     "dev": "nodemon --watch contract -e ts --exec \"npm run start\"",
-    "test": "npm run build:contract:debug && cd contract && npm run test && cd .. && jest test --runInBand"
+    "test": "npm run build:contract:debug && cd contract && npm run test && cd .. && jest test --runInBand",
+    "test:unit:as": "npx asp --verbose --nologo -c ./contract/assembly/as-pect.config.js -f unit.spec"
   },
   "devDependencies": {
     "@babel/core": "~7.13.1",
@@ -34,6 +36,8 @@
   },
   "dependencies": {
     "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "assemblyscript": "^0.18.16",
     "near-api-js": "~0.36.3",
     "react": "~17.0.1",
     "react-dom": "~17.0.1",
