--- a/package.json
+++ b/package.json
@@ -4,43 +4,43 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "npm run build:contract && npm run build:web",
-    "build:contract": "node ./contract/assembly/compile.js",
-    "build:contract:debug": "npx asb ./contract/assembly/main.ts --outDir=./out/",
-    "build:as": "yarn asb ./contract/assembly/main.ts",
+    "build:contract": "node ./contract/compile.js",
+    "build:contract:debug": "yarn asb ./contract/assembly/main.ts --outDir=./out/",
+    "build:as": "yarn asb contract/assembly/main.ts --outDir=../out",
     "build:web": "parcel build src/index.html --public-url ./",
     "dev:deploy:contract": "near dev-deploy",
     "deploy:contract": "near deploy",
     "deploy:pages": "gh-pages -d dist/",
     "deploy": "npm run build && npm run deploy:contract && npm run deploy:pages",
-    "prestart": "npm run build:contract:debug && npm run dev:deploy:contract",
+    "prestart": "npm run build:contract && npm run dev:deploy:contract",
     "start": "echo The app is starting! It will automatically open in your browser when ready && env-cmd -f ./neardev/dev-account.env parcel src/index.html --open",
     "dev": "nodemon --watch contract -e ts --exec \"npm run start\"",
     "test": "npm run build:contract:debug && cd contract && npm run test && cd .. && jest test --runInBand",
-    "test:unit:as": "npx asp --verbose --nologo -c ./contract/assembly/as-pect.config.js -f unit.spec"
+    "test:unit:as": "yarn asp --verbose --nologo -c ./contract/assembly/as-pect.config.js -f unit.spec"
   },
   "devDependencies": {
     "@babel/core": "~7.13.1",
     "@babel/preset-env": "~7.13.5",
     "@babel/preset-react": "~7.12.5",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "@types/regenerator-runtime": "^0.13.0",
     "babel-jest": "~26.6.2",
     "env-cmd": "~10.1.0",
     "gh-pages": "~3.1.0",
     "jest": "~26.6.2",
     "jest-environment-node": "~26.6.2",
-    "near-cli": "~1.5.3",
+    "near-cli": "^1.5.4",
     "nodemon": "~2.0.3",
     "parcel-bundler": "~1.12.4",
     "react-test-renderer": "~17.0.1",
     "shelljs": "~0.8.4"
   },
   "dependencies": {
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
     "assemblyscript": "^0.18.16",
     "near-api-js": "~0.36.3",
-    "react": "~17.0.1",
-    "react-dom": "~17.0.1",
+    "react": "~17.0.2",
+    "react-dom": "~17.0.2",
     "regenerator-runtime": "^0.13.7"
   },
   "resolutions": {
