--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "shelljs": "~0.8.4"
   },
   "dependencies": {
+    "antd": "^4.14.1",
     "asbuild": "^0.0.11",
     "assemblyscript": "^0.18.16",
     "near-api-js": "~0.36.3",
